# adif2xml

./: .gitignore  LICENSE  QSO.adi  QSO.xml  README.md  adif2xml.py  pyproject.toml  requirements.txt
adif2xml/: __main__.py
