[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "adif2xml" 
version = "1.0.1"
description = "Converts an ADIF file to XML."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name="Michael Bridak", email="michael.bridak@gmail.com" },
]
dependencies = [
    "dicttoxml",
    "adif_io",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Topic :: Communications :: Ham Radio",
]

[project.urls]
"Homepage" = "https://github.com/mbridak/adif2xml"
"Bug Tracker" = "https://github.com/mbridak/adif2xml/issues"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
adif2xml = "adif2xml.__main__:main"